@@ -6,7 +6,9 @@ experimenting with using it for their documentation.  If you like to be
 included, please mail to `the Google group
 <http://groups.google.com/group/sphinx-dev>`_.
 
+* Applied Mathematics at the Stellenbosch University: http://dip.sun.ac.za/
 * APSW: http://apsw.googlecode.com/svn/publish/index.html
+* ASE: https://wiki.fysik.dtu.dk/ase/
 * boostmpi: http://documen.tician.de/boostmpi/
 * Calibre: http://calibre.kovidgoyal.net/user_manual/
 * Chaco: http://code.enthought.com/projects/chaco/docs/html/
@@ -17,13 +19,17 @@ included, please mail to `the Google group
 * Djagios: http://djagios.org/
 * Django: http://docs.djangoproject.com/
 * F2py: http://www.f2py.org/html/
+* Fityk: http://www.unipress.waw.pl/fityk/
 * GeoDjango: http://geodjango.org/docs/
 * GeoServer: http://docs.geoserver.org/
 * Glashammer: http://glashammer.org/
+* GPAW: https://wiki.fysik.dtu.dk/gpaw/
 * Grok: http://grok.zope.org/doc/current/
+* GSL Shell: http://www.nongnu.org/gsl-shell/
 * Hedge: http://documen.tician.de/hedge/
 * IFM: http://fluffybunny.memebot.com/ifm-docs/index.html
 * Jinja: http://jinja.pocoo.org/2/documentation/
+* Kaa: http://doc.freevo.org/api/kaa/
 * LEPL: http://www.acooke.org/lepl/
 * MapServer: http://mapserver.org/
 * Matplotlib: http://matplotlib.sourceforge.net/
