@@ -84,6 +84,11 @@ The builder's "name" must be given to the **-b** command-line option of
 
    Its name is ``latex``.
 
+Note that a direct PDF builder using ReportLab is available in `rst2pdf
+<http://rst2pdf.googlecode.com>`_ version 0.12 or greater.  You need to add
+``'rst2pdf.pdfbuilder'`` to your :confval:`extensions` to enable it, its name is
+``pdf``.
+
 .. module:: sphinx.builders.text
 .. class:: TextBuilder
 
