@@ -25,7 +25,7 @@ from docutils import nodes
 from sphinx.errors import SphinxError
 from sphinx.util import ensuredir
 from sphinx.util.png import read_png_depth, write_png_depth
-from sphinx.ext.mathbase import setup as mathbase_setup, wrap_displaymath
+from sphinx.ext.mathbase import setup_math as mathbase_setup, wrap_displaymath
 
 class MathExtError(SphinxError):
     category = 'Math extension error'
