@@ -93,12 +93,14 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset={{ encoding }}" />
     {{ metatags }}
-    {%- if not embedded %}
+    {%- if not embedded and docstitle %}
       {%- set titlesuffix = " &mdash; "|safe + docstitle|e %}
     {%- else %}
       {%- set titlesuffix = "" %}
     {%- endif %}
+    {%- block htmltitle %}
     <title>{{ title|striptags }}{{ titlesuffix }}</title>
+    {%- endblock %}
     <link rel="stylesheet" href="{{ pathto('_static/' + style, 1) }}" type="text/css" />
     <link rel="stylesheet" href="{{ pathto('_static/pygments.css', 1) }}" type="text/css" />
     {%- for cssfile in css_files %}
